--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "3.12.5"
 streamlit = "^1.38.0"
 google-generativeai = "^0.8.2"
+pylint = "^3.3.1"
+black = "^24.8.0"
 
 
 [build-system]
