--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ streamlit = "^1.38.0"
 google-generativeai = "^0.8.2"
 pylint = "^3.3.1"
 black = "^24.8.0"
+pre-commit = "^3.8.0"
 
 
 [build-system]
