--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,4 +30,4 @@ jobs:
         run: poetry run black --check .
 
       - name: Run Pylint
-        run: poetry run pylint your_project_name/ 
+        run: poetry run pylint stockup/ 
