feat:major changes on directory, added yfinance

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,10 @@ repos:
       - id: black
         language_version: python3.12.5
 
-  - repo: https://github.com/pre-commit/mirrors-pylint
-    rev: v3.3.1
-    hooks:
-      - id: pylint
-        language_version: python3.12.5
+  # - repo: local
+  #   hooks:
+  #     - id: pylint
+  #       name: pylint
+  #       entry: pylint
+  #       language: system
+  #       types: [python]
