--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ google-generativeai = "^0.8.2"
 pylint = "^3.3.1"
 black = "^24.8.0"
 pre-commit = "^3.8.0"
+yfinance = "^0.2.44"
+pytest = "^8.3.3"
+pytest-mock = "^3.14.0"
 
 
 [build-system]
