--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pre-commit = "^3.8.0"
 yfinance = "^0.2.44"
 pytest = "^8.3.3"
 pytest-mock = "^3.14.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
