--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,5 +23,8 @@
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "echarts": "^5.6.0"
   }
 }
