--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "vite": "^6.0.0"
   },
   "dependencies": {
-    "echarts": "^5.6.0"
+    "echarts": "^5.6.0",
+    "marked": "^15.0.7"
   }
 }
