--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,22 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint src --ext .js,.ts,.svelte"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^4.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "eslint": "^9.22.0",
+    "eslint-plugin-svelte": "^3.1.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.1",
     "prettier-plugin-svelte": "^3.3.3",
-    "svelte": "^5.0.0",
+    "svelte": "^5.22.6",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.26.0",
     "vite": "^6.0.0"
   },
   "dependencies": {
