--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "vite": "^6.0.0"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.2.4",
     "echarts": "^5.6.0",
     "marked": "^15.0.7"
   }
