--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,10 +29,10 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      # - name: Install dependencies
-      #   run: |
-      #     poetry install
-      #     poetry run pip install pytest
+      - name: Install dependencies
+        run: |
+          poetry install
+          poetry run pip install pytest
 
       - name: Run formatting check (black)
         run: poetry run black --check app/ test/
